examples/LINUX/tests/errors/char-const-missing-separator.biplan


// Character constant syntax check, separator is missing.
// Compiler should return "non matching ''" error


print 'H
stop